fix: fix mobile issue with overlapping elements

--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@ body {
   #title {
         display: block;    
         position: fixed;
+        white-space: normal;
         top: 0%;
         right: 10%;
         z-index: 1;
@@ -16,6 +17,7 @@ body {
   h2{
     display: block; 
     position: fixed;
+    white-space: normal;
     top: 20%;
     right: 10%;
     z-index: 2;
@@ -25,6 +27,7 @@ body {
 main {
   display: block; 
   position: sticky;
+  white-space: normal;
   width: 50%;
   max-width: 660px;
   background-color: var(--background);
